# pkmn-engine-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/pkmn-core/: Cargo.toml
crates/pkmn-core/src/: abilities.rs  damage.rs  items.rs  lib.rs  moves.rs  nature.rs  species.rs  stats.rs  types.rs
crates/pkmn-engine/: Cargo.toml
crates/pkmn-engine/benches/: battle_bench.rs
crates/pkmn-engine/src/: abilities.rs  battle.rs  choice.rs  events.rs  field.rs  hazards.rs  items_effect.rs  lib.rs  pokemon.rs  priority.rs  side.rs  turn.rs
crates/pkmn-engine/tests/: damage_verification.rs  differential.rs  full_sim_test.rs  integration.rs  protocol.rs  strict_verification.rs
crates/pkmn-wasm/: Cargo.toml
crates/pkmn-wasm/src/: lib.rs
docs/: full-info-differential-testing.md  full-sim-differential.md  plan.md
docs/handoffs/: 2026-05-07-accuracy-grind.md
tests/fixtures/: drizzle_rain_boost.json  intimidate_switch.json  simple_ohko.json  switch_hazards.json  weather_battle.json
tests/fixtures/full-info/: ability-adaptability.json  ability-aerilate.json  ability-analytic.json  ability-galvanize.json  ability-huge-pure-power.json  ability-mega-launcher.json  ability-neuroforce.json  ability-pixilate.json  ability-punk-rock-defense.json  ability-punk-rock-offense.json  ability-reckless.json  ability-refrigerate.json  ability-sharpness.json  ability-sheer-force-lo.json  ability-steelworker.json  ability-sword-of-ruin.json  ability-tablets-of-ruin.json  (+105 more)
tools/: fetch-fixtures.py  gen-data.py
tools/generate-fixtures/: package-lock.json  package.json  tsconfig.json
(+362 files in other folders)
