[workspace]
members = [
    "crates/pkmn-core",
    "crates/pkmn-engine",
    "crates/pkmn-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ayuan153"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
