[package]
name = "pkmn-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance Pokemon battle simulation engine"

[dependencies]
pkmn-core = { path = "../pkmn-core" }
serde = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = "0.5"

[[bench]]
name = "battle_bench"
harness = false
